--- a/.github/workflows/ZTE-E8820S.yml
+++ b/.github/workflows/ZTE-E8820S.yml
@@ -83,6 +83,7 @@ jobs:
         #echo "自定义项=y" >> .config
         #########################################################################################
         chmod +x ./clear_tree
+        sudo ./clear_tree
         sudo ./build_firmware_modify $TNAME 0
         sudo mv -f images/*.trx /opt/images/
     - name : Upload packages
